# udacity_ds_term2_disaster_response_pipeline

./: .gitignore  README.md  pyproject.toml
app/: run.py
data/: process_data.py
models/: train_classifier.py
notebooks/: ETL Pipeline Preparation.ipynb  ML Pipeline Preparation.ipynb
