[tool.poetry]
name = "udacity-ds-term2-disaster-response-pipeline"
version = "0.1.0"
description = ""
authors = ["Matthew.Hull <matthew.hull@shell.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1"
nltk = "^3.8.1"
scikit-learn = "^1.3.2"
SQLAlchemy = "^2.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
