[tool.poetry]
name = "udacity-ds-term2-disaster-response-pipeline"
version = "0.1.0"
description = ""
authors = ["Matthew.Hull <matthew.hull@shell.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.2"
pandas = "~1.2"
sqlalchemy = "~1"
ipykernel = "^6.26.0"
nltk = "^3.8.1"
plotly = "^5.18.0"
flask = "^3.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
